syntax = "proto2";
package draiosproto;

option optimize_for = SPEED;
option java_package = "com.draios.model.protobuf";
option java_outer_classname = "ProtobufCommon";

message aggregations_double {
    required uint64 weight = 1;
    required double max = 2;
    required double min = 3;
    required double sum = 4;
}

message app_metric_bucket {
    required string label = 1;

    optional uint64 count = 2;
    optional aggregations_double aggr_count = 3;
}

message counter_percentile_data {
    required uint32 scale = 1; // scale factor for min, max and means
    required uint32 num_samples = 2;
    required uint64 min = 3; // minimum of all the samples
    required uint64 max = 4; // maximum of all the samples
    repeated uint64 means = 5 [packed=true]; // the first value is the actual sample, the rest are relative diff compared to previous sample
    repeated uint32 weights = 6 [packed=true]; // weight of corresponding sample
}
